# DAA-Practica_5

./: .gitignore  .tasks  report.tasks
.ccls-cache/@home@cristo@Desktop@DAA@DAA-Practica_5/: include@monomio.hpp  include@monomio.hpp.blob  src@main.cpp.blob
.github/: reviewdog.yml
.github/workflows/: codeql-analysis.yml  reviewdog.yml
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/src/: Makefile  cmake_install.cmake
include/: m_clasico.hpp  m_dyv.hpp  monomio.hpp  multiplicacion_interfaz.hpp  polinomio.hpp  times.hpp
src/: CMakeLists.txt  m_clasico.cpp  m_dyv.cpp  main.cpp  monomio.cpp  polinomio.cpp  times.cpp
test/: CMakeLists.txt  test.cpp
